name:                       bounded-list
version:                    0.1.0.0
synopsis:                   Type-safe list in haskell.
description:                Type-safe list implemented in Haskell via simulating dependent type.
homepage:                   http://github.com/sighingnow/bounded-list#readme
license:                    BSD3
license-file:               LICENSE
author:                     Tao He
maintainer:                 sighingnow@gmail.com
copyright:                  Copyright: (c) 2016 Tao He
category:                   Simple
build-type:                 Simple
cabal-version:              >= 1.10

Executable bounded-list
    hs-source-dirs:         src
    main-is:                Main.hs
    default-language:       Haskell2010
    build-depends:          base >= 4.7 && < 5

Library
    exposed-modules:
        Data.BList
    other-modules:
        Data.BList.Nat
    hs-source-dirs:         src
    default-language:       Haskell2010
    build-depends:          base >= 4.7 && < 5

